add user swagger annotation
